# Face-Login-System

./: .gitignore  README.md  main.py  pyproject.toml
cli/: __init__.py  audit.py  delete.py  enhance.py  enroll.py  list_faces.py  recognize.py
config/: __init__.py  camera.py  defaults.py  models.py  paths.py  validation.py
debug/: __init__.py  debug_saver.py  recognition_debug.py  register_from_image.py
docs/: anti_spoofing.md  architecture_overview.md  cli_commands.md  configuration.md  data_storage.md  debug.md  error_handling.md  installation_and_setup.md  models.md  modules.md  performence.md  pipeline_workflow.md  project_overview.md  project_structure.md
src/capture/: __init__.py  stream.py
src/detection/: __init__.py  detector.py  mediapipe_detector.py
src/enhancement/: __init__.py  clahe.py  enhancer.py  low_light.py
src/enhancement/sr/: __init__.py  arch_gfpgan.py  arch_stylegan2.py  sr_factory.py  sr_gfpgan.py  sr_model.py  sr_openvino.py  sr_realesrgan.py
src/exceptions/: __init__.py  camera.py  config.py  face.py  model.py
src/indexing/: __init__.py  hnsw_index.py
src/liveness/: __init__.py  blink_detector.py  ear.py  liveness_check.py
src/logger/: __init__.py  setup.py
src/mesh/: __init__.py  face_mesh.py  liveness.py  mesh_embedding.py  texture_liveness.py
src/recognition/: __init__.py  recognizer.py
src/recognition/embedding/: __init__.py  align.py  arcface.py  model_loader.py
src/recognition/enrollment/: __init__.py  duplicate_checker.py  guided_enroll.py
src/utils/: __init__.py  downloader.py  similarity.py
