[project]
name = "face-login-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hnswlib>=0.8.0",
    "mediapipe>=0.10.32",
    "onnxruntime>=1.24.2",
    "opencv-contrib-python>=4.13.0.92",
    "opencv-python>=4.13.0.92",
    "openvino>=2026.0.0",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
